[gd_scene load_steps=9 format=3 uid="uid://7ytrn8jf4nj4"]

[ext_resource type="Texture2D" uid="uid://cobx6c77opf2j" path="res://icon.svg" id="1_sxopn"]
[ext_resource type="Script" path="res://Ryr/Modules/item_detail_popup.gd" id="1_w4460"]

[sub_resource type="Gradient" id="Gradient_q60qx"]
offsets = PackedFloat32Array(0)
colors = PackedColorArray(0, 0, 0, 0.294118)

[sub_resource type="GradientTexture1D" id="GradientTexture1D_kcnoc"]
gradient = SubResource("Gradient_q60qx")

[sub_resource type="Animation" id="Animation_xk4pt"]
resource_name = "None"
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("ItemModel:scale")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(1, 1)]
}

[sub_resource type="Animation" id="Animation_usj00"]
resource_name = "Active"
length = 2.0
loop_mode = 2
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("ItemModel:scale")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 2),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Vector2(1, 1), Vector2(-1, 1)]
}

[sub_resource type="Animation" id="Animation_ue3oe"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("ItemModel:scale")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(1, 1)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_g83tb"]
_data = {
"Active": SubResource("Animation_usj00"),
"None": SubResource("Animation_xk4pt"),
"RESET": SubResource("Animation_ue3oe")
}

[node name="ItemDetailPopup" type="CanvasLayer"]
layer = 10
script = ExtResource("1_w4460")

[node name="Background" type="NinePatchRect" parent="."]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
texture = SubResource("GradientTexture1D_kcnoc")

[node name="ItemDetailPanel" type="Control" parent="."]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="AnimationPlayer" type="AnimationPlayer" parent="ItemDetailPanel"]
libraries = {
"": SubResource("AnimationLibrary_g83tb")
}
autoplay = "None"

[node name="ItemModel" type="TextureRect" parent="ItemDetailPanel"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -100.0
offset_top = -249.0
offset_right = 100.0
offset_bottom = -49.0
grow_horizontal = 2
grow_vertical = 2
pivot_offset = Vector2(100, 100)
texture = ExtResource("1_sxopn")

[node name="ItemName" type="RichTextLabel" parent="ItemDetailPanel"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -91.0
offset_top = -24.0
offset_right = 84.0
offset_bottom = 16.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2
text = "Ordinary Key"
fit_content = true
scroll_active = false

[node name="ItemDescription" type="RichTextLabel" parent="ItemDetailPanel"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -301.0
offset_top = 44.0
offset_right = 302.0
offset_bottom = 194.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2
text = "This is just ordinary key"
fit_content = true
scroll_active = false

[node name="CloseButton" type="Button" parent="."]
custom_minimum_size = Vector2(50, 50)
anchors_preset = 1
anchor_left = 1.0
anchor_right = 1.0
offset_left = -67.0
offset_top = 15.0
offset_right = -17.0
offset_bottom = 65.0
grow_horizontal = 0
text = "X"

[connection signal="pressed" from="CloseButton" to="." method="_on_close_button_pressed"]
